--- a/assets/styles.css
+++ b/assets/styles.css
@@ -182,6 +182,17 @@ button {
 button:hover {
   background-color: #0056b3;
 }
+/*///Media Queries/*/
+@media (max-width: 768px) {
+  header nav ul {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  #progress form, #contact form {
+    width: 90%;
+  }
+}
 /*/////////////////////////////////////*/
 /* General Styles for Footer */
 footer {
