--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,7 +12,7 @@ body {
 
 /*///////////////////////////*/
     #my-section {
-      background-image: url('assets/images/wireframe.webp');
+      background-image: url('images/wireframe.webp');
       background-size: cover; /* Ensures the image covers the entire section */
       background-position: center; /* Centers the background image */
       height: 500px; /* Set the height of the section */
