--- a/assets/wireframe.css
+++ b/assets/wireframe.css
@@ -12,7 +12,7 @@ body {
   
   /* Section with Wireframe Background */
   #my-section {
-    background-image: url('images/wireframe.webp');
+    background-image: url('assets/images/wireframe.webp');
     background-size: cover; /* Ensures the image covers the entire section */
     background-position: center; /* Centers the background image */
     height: 500px; /* Set the height of the section */
